--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,6 +18,7 @@ and open the template in the editor.
             Password: <input type="password" id="password" name="password"/>
             <input type="submit"/>
             <input type="reset" value="reset"/>
+            <input type="hidden"  th:name="${_csrf.parameterName}" th:value="${_csrf.token}"ss/>
         </form>
     </body>
 </html>
